# atcoder-python-2026

./: .python-version  pyproject.toml  snippets.json
src/python/: README.md  a.out  answer.py  keybindings.json  pypyjit.py  snippets.json  temp1.py  temp2.py
src/python/cheat_sheet/: FPS.md  グラフ.md  マンハッタン距離.md  区間に対するクエリ.md  整数問題.md  文字列問題.md  期待値DP.md  桁dp.md  遅延セグ木.md
src/python/codon/dsu/: dsu.py
src/python/codon/fenwicktree/: fenwicktree.py
src/python/codon/lazysegtree/: lazysegtree.py
src/python/codon/segtree/: segtree.py
src/python/codon/sortedset/: bucketlist.py  sortedmultiset.py  sortedset.py
src/python/codon/string/: suffix_array.py  z_algorithm.py
src/python/inout/: input.txt  output.txt  output2.txt
src/python/lib/: copyfromclip.py  file2json.py  macro.txt  my_startup_script.py  newanswer.py  paste2clip.py  rangeset.py  updatesnipet.py
src/python/random_test/: answer_bf.py  gen_rand.py
