[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "manuo-git",email = "saintmanuo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "more-itertools (==10.7.0)",
    "ac-library-python @ git+https://github.com/not522/ac-library-python@27fdbb71cd0d566bdeb12746db59c9d908c6b5d5",
    "online-judge-tools (>=11.5.1,<12.0.0)",
    "pyperclip (>=1.11.0,<2.0.0)",
    "wheel (>=0.45.1,<0.46.0)"
]

[tool.poetry]
packages = [{include = "python", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
